--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!-- end of products -->
 
     <!-- cart -->
-    <div class="class-overlay">
+    <div class="cart-overlay">
       <div class="cart">
         <span class="close-cart">
           <i class="fas fa-window-close"></i>
@@ -80,19 +80,9 @@
         <h2>your cart</h2>
         <div class="cart-content">
           <!-- cart item -->
-          <div class="cart-item">
-            <img src="./images/product-1.jpeg" alt="product" />
-            <div>
-              <h4>Queen bed</h4>
-              <h5>$0.09</h5>
-              <span class="remove-item">remove</span>
-            </div>
-            <div>
-              <i class="fas fa-chevron-up"></i>
-              <p class="item-amount">1</p>
-              <i class="fas fa-chevron-down"></i>
-            </div>
-          </div>
+          <!-- <div class="cart-item">
+            
+          </div> -->
           <!-- end of cart item -->
         </div>
         <div class="cart-footer">
