--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
     </div>
     <!-- end of cart -->
 
+    <!-- contentful -->
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+
+    <!-- app -->
     <script src="app.js"></script>
   </body>
 </html>
